# Personal-Organizer

./: CMakeLists.txt  README.md  addexpenses.cpp  addexpenses.h  addexpenses.ui  addimportantdates.cpp  addimportantdates.h  addimportantdates.ui  addincome.cpp  addincome.h  addincome.ui  addlectureshedule.cpp  addlectureshedule.h  addlectureshedule.ui  dashboard.cpp  dashboard.h  dashboard.ui  databaseheader.h  displaylectureshedule.cpp  displaylectureshedule.h  displaylectureshedule.ui  expensesstatus.cpp  expensesstatus.h  expensesstatus.ui  login.cpp  login.h  login.ui  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  monthlyreports.cpp  monthlyreports.h  monthlyreports.ui  setbudgets.cpp  setbudgets.h  setbudgets.ui  signup.cpp  signup.h  signup.ui  (+1 more)
database/: mypersonal-organizer.db  mypersonal-organizer.sqbpro
